--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Web</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>redes sociales</h1>
+    <h1>Redes Sociales</h1>
     <img src="/Primer portfolio/img/ventu.png" alt="Logo Weg">
-    <p>Dj a tiempo parcial</p>
+    <p>¡Hola! Soy DJ Ventu, un DJ y productor de música electrónica. Puedes encontrarme en las siguientes redes sociales:</p>
     <ul>
-        <li>
-            <a href="https://www.instagram.com/djventudj/">Instagram</a><br>
-            <a href="https://www.youtube.com/@djventu6699">YouTube</a>  <br>         
-            <a href="https://www.tiktok.com/@djventu?lang=es">Tik Tok</a>
-        </li>
+        <li><a href="https://www.instagram.com/djventudj/">Instagram</a></li>
+        <li><a href="https://www.youtube.com/@djventu6699">YouTube</a></li>
+        <li><a href="https://www.tiktok.com/@djventu?lang=es">Tik Tok</a></li>
+        <li><a href="https://github.com/djventu">GitHub</a></li>
     </ul>
 </body>
 </html>
