--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Redes Sociales</h1>
-    <img src="/Primer portfolio/img/ventu.png" alt="Logo Weg">
+    <img src="img/ventu.png" alt="Logo Weg">
     <p>¡Hola! Soy DJ Ventu, un DJ y productor de música electrónica. Puedes encontrarme en las siguientes redes sociales:</p>
     <ul>
         <li><a href="https://www.instagram.com/djventudj/">Instagram</a></li>
