--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <h1>Redes Sociales</h1>
     <img src="img/ventu.png" alt="Logo Weg">
-    <p>¡Hola! Soy DJ Ventu, un DJ y productor de música electrónica. Puedes encontrarme en las siguientes redes sociales:</p>
+    <p>¡Hola! Soy DJ Ventu, un DJ y productor de música electrónica. <br>
+        Puedes encontrarme en las siguientes redes sociales:</p>
     <ul>
         <li><a href="https://www.instagram.com/djventudj/">Instagram</a></li>
         <li><a href="https://www.youtube.com/@djventu6699">YouTube</a></li>
